--- a/app/views/interesteds/edit.html.erb
+++ b/app/views/interesteds/edit.html.erb
@@ -2,6 +2,6 @@
 <% content_for :title do %> Atualizar interessados - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Editar Interessado - <%= @interested.name %></h1>
+<h1>Editar Interessado - <%= @interesteds.name %></h1>
 
 <%= render 'form' %>
