--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -18,7 +18,7 @@
     </ul>
   <% end %>
 
-<%= link_to "Nova inscrição", courses_new_path, class: "btEnviarForm" %>
+<%= link_to "Nova inscrição", new_registration_path, class: "btEnviarForm" %>
 
 </div>
 
@@ -63,6 +63,6 @@
 
     </table>
   <% else %>
-    <h2>Nenhum curso cadastrado até o momento</h2>
+    <h2>Nenhuma inscrição realizada até o momento</h2>
   <% end %>
 </div>
