--- a/app/views/shared/_menu_courses.html.erb
+++ b/app/views/shared/_menu_courses.html.erb
@@ -2,4 +2,4 @@
 <%= link_to "Turmas", teams_path %> |
 <%= link_to "Alunos", students_path %> |
 <%= link_to "Interessados", interesteds_path %> |
-<%= link_to "Inscrições", registration_path %> 
+<%= link_to "Inscrições", registrations_path %> 
