--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @registration do |c| %>
+<%= form_for @registration do |r| %>
 
 <% if @registration.errors.any? %>
     <div id="error_explanation">
@@ -11,37 +11,7 @@
   <% end %>
 
 <ul>
-    <li>
-        <label>
-            <span>Código: </span>
-            <%= c.object.code || @course_code %>
-            <%= c.hidden_field :code, :value => @course_code || c.object.code %>
-        </label>
-    </li>
-
-    <li>
-        <label>
-            <span>Nome*:</span><br/>
-            <%= c.text_field :name, :class => "inputMedio input" %>
-        </label>
-    </li>
-
-    <li>
-        <label>
-            <span>Tipo*:</span><br/>
-            <%= c.select :course_type, @course_category, { :prompt => "Escolha o tipo do curso" } , :class => 'select selectMedio' %>
-        </label>
-    </li>
-
-    <li>
-        <label>
-            <span>Descrição*:</span><br/>
-            <%= c.text_area :description, :class => "inputMedio input" %>
-        </label>
-    </li>
-
     <li class="btEnviarForm">
-    	<%= c.submit %>
-        <%#= link_to "Cancelar", courses_path, :class => "btEnviarForm"  %>
+    	<%= r.submit %>
     </li>
 <% end %>
