--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <!-- TITLE -->
-<% content_for :title do %> Atualizar curso - Sistema Grupo Vida, Amor e Riso! <% end %>
+<% content_for :title do %> Atualizar inscrição - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Editar curso - <%= @course.name %></h1>
+<h1>Editar inscrição - <%= @course.name %></h1>
 
 <%= render 'form' %>
