--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <!-- TITLE -->
-<% content_for :title do %> Novo cursos - Sistema Grupo Vida, Amor e Riso! <% end %>
+<% content_for :title do %> Nova inscrição - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Novo curso</h1>
+<h1>Nova inscrição</h1>
 
 <%= render 'form' %>
