Acerto de url em cursos

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -20,7 +20,7 @@
 </div>
 
 <ul>
-	<li><%= link_to "Criar turma", teams_new_path, :class => "btEnviarForm" %></li>
+	<li><%= link_to "Criar turma", new_team_path, :class => "btEnviarForm" %></li>
 	<li><%= link_to "Cancelar curso", cancel_course_path, :class => "btEnviarForm" %></li>
 	<li><%= link_to "Voltar", courses_path, :class => "btEnviarForm" %></li>
 </ul>
