--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -22,5 +22,6 @@
 <ul>
 	<li><%= link_to "Criar turma", new_team_path, :class => "btEnviarForm" %></li>
 	<li><%= link_to "Cancelar curso", cancel_course_path, :class => "btEnviarForm" %></li>
+	<li><%= link_to "Editar", edit_course_path, :class => "btEnviarForm" %></li>
 	<li><%= link_to "Voltar", courses_path, :class => "btEnviarForm" %></li>
 </ul>
