--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -31,7 +31,7 @@
         <!-- <span><%#= c.code %></span> -->
         <span><%= c.name %></span>
         <span><%= c.categoria %></span>
-        <%= link_to 'Abrir', edit_course_path(c), :class => 'btVoltarForm' %>
+        <%= link_to 'Abrir', course_path(c), :class => 'btVoltarForm' %>
       </p>
     <% end %>
 
