--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -37,7 +37,7 @@
       </li>
     </ul>
   <% end %>
-<%= link_to 'Novo Serviço', new_schedule_path, class: "btEnviarForm" %>
+<%= link_to 'Agendar Serviço', new_schedule_path, class: "btEnviarForm" %>
 </div>
 
 <div id="guardaAtividadesRecentes">
