--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -2,6 +2,6 @@
 <% content_for :title do %> Editar Usuário - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 
-<h1>Editar usuários</h1>
+<h1>Editar serviço</h1>
 
 <%= render 'form' %>
