Correcoes em alunos

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -59,7 +59,7 @@
       <p>
         <span><%= s.name %></span>
         <span><%= s.cpf %></span>
-        <%= link_to 'Abrir', edit_student_path(s), :class => 'btVoltarForm' %>
+        <%= link_to 'Abrir', student_path(s), :class => 'btVoltarForm' %>
       </p>
     <% end %>
   <% else %>
